# rmapi-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
rmapi/: Cargo.toml  README.md
rmapi/src/: client.rs  endpoints.rs  error.rs  lib.rs
rmapi/src/objects/: remarkable_object.rs
rmclient/: Cargo.toml  README.md
rmclient/src/: main.rs
rmclient/src/rmclient/: error.rs
src/: main.rs
src/rmapi/: client.rs  endpoints.rs  mod.rs
src/rmapi/objects/: collection.rs  document.rs  mod.rs
