[package]
name = "rmapi"
description = "A command line client for the reMarkable Cloud API"
readme = "README.md"
keywords = ["remarkable", "cloud", "api", "client"]
categories = []

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
log = "0.4.14"
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
const_format = "0.2.33"
tokio = { version = "1.40.0", features = ["fs"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
