[package]
name = "rmclient"
description = "A command line client for the reMarkable Cloud API"
readme = "README.md"
keywords = ["remarkable", "cloud", "api", "client"]
categories = ["command-line-utilities"]

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
rmapi = { version = "0.0.1", path = "../rmapi" }
clap = { version = "4.5.17", features = ["derive", "string"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.14"
dirs = "5.0.1"
